# leakchef

./: .env  Cargo.toml  README.md  docker-compose.yml  openapi.yml
.cargo/: config.toml
demo-client/: Cargo.toml  README.md
demo-client/benches/: timing.rs
demo-client/src/: demo_client.rs  lib.rs  main.rs
fakes/: Cargo.toml
fakes/src/: main.rs
lib-client/: Cargo.toml  README.md
lib-client/src/: lib.rs
proxy/: Dockerfile  actix_web_server.crt  actix_web_server.key  nginx.conf
scripts/: count_identities.py  export_leak-ids.py  large.csv  medium.csv  plot_avgs.py  plot_server.py  plotter.py  prep_customers.py  rtt.py  small.csv
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  handlers.rs  lib.rs  main.rs  routes.rs  server.rs
server/src/db/: db_client.rs  db_types.rs  mod.rs
server/src/utils/: cache.rs  errors.rs  identities.rs  mod.rs  requests.rs  responses.rs  salt.rs
server/tests/: db_client_test.rs  server_test.rs
