[package]
name = "demo-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenvy = "0.15.7"
lib-client = {path = "../lib-client"}
server = {path = "../server"}
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
tracing = {version = "0.1", features = ["attributes", "std", "tracing-attributes", "async-await"]}
tracing-subscriber = {version = "0.3", features = ["ansi"]}
crusty = { version = "0.10", registry = "identeco" }
serde = "1.0.170"
tokio-shutdown = "0.1.4"
futures = "0.3.28"
memory-stats = "1.1.0"

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}

[[bench]]
name = "timing"
harness = false

