[package]
name = "fakes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
fake = "2.6.1"
serde = "1.0.179"
serde_json = "1.0.104"
tokio = "1.29.1"
typed-builder = "0.15.1"
lib-client = {path = "../lib-client"}
crusty = { version = "0.10", registry = "identeco" }
anyhow = "1.0.72"
server = {path = "../server"}

