[package]
name = "lib-client"
version = "0.1.0"
edition = "2021"
authors = ["Kristi Balla"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
reqwest = { version = "0.11.18", features = ["rustls", "json"] }
serde = "1.0.170"
thiserror = "1.0.40"
tracing = {version = "0.1", features = ["attributes", "std", "tracing-attributes", "async-await"]}
tracing-subscriber = {version = "0.3", features = ["ansi"]}
typed-builder = "0.14.0"
server = {path = "../server"}
mongodb = "2.6.0"
serde_json = "1.0.105"
