[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Kristi Balla"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-builder = "0.14"
futures = "0.3"
anyhow = "1.0"
actix-http = "3.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "offline" ] }
dotenvy = "0.15"
env_logger = "0.10"
tracing = {version = "0.1", features = ["attributes", "std", "tracing-attributes", "async-await"]}
tracing-subscriber = {version = "0.3", features = ["ansi"]}
mongodb = "2.5"
reqwest = "0.11"
futures-util = "0.3"
uuid = "1.3"
bson = "2.6.1"
crusty = { version = "0.10", registry = "identeco" }
serde_yaml = "0.9.25"
tokio-shutdown = "0.1.4"
cached = "0.44.0"
memory-stats = "1.1.0"

[dev-dependencies]
parameterized = "1.0"
rstest = "0.17"
actix-web-httpauth = "0.8"
